--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -140,5 +140,51 @@
       </div>
     </li>
   </ul>
+  <ul class="nav" *ngIf="Roles == 'Customer'">
+    <li routerLinkActive="active" *ngFor="let menuitem of customerMenuItems">
+      <!--If is a single link-->
+      <a [routerLink]="[menuitem.path]" *ngIf="menuitem.type === 'link'">
+        <i class="{{menuitem.icontype}}"></i>
+        <p>{{menuitem.title}}</p>
+      </a>
+      <!--If it have a submenu-->
+      <a data-toggle="collapse" href="#{{menuitem.collapse}}" *ngIf="menuitem.type === 'sub'">
+        <i class="{{menuitem.icontype}}"></i>
+        <p>{{menuitem.title}}<b class="caret"></b></p>
+      </a>
 
+      <!--Display the submenu items-->
+      <div id="{{menuitem.collapse}}" class="collapse" *ngIf="menuitem.type === 'sub'">
+        <ul class="nav">
+          <li routerLinkActive="active" *ngFor="let childitem of menuitem.children">
+            <a [routerLink]="[menuitem.path, childitem.path]">
+              <span class="sidebar-mini-icon">{{childitem.ab}}</span>
+              <span class="sidebar-normal">{{childitem.title}}</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+
+</div>
+<div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="logo">
+        <div class="logo-image-smalllogo-mini logo-normal">
+          <a routerLink="/dashboard" class="simple-text">
+            <img src="./assets/img/logo1.png" />
+
+          </a>
+        </div>
+        <!-- <a routerLink="/dashboard" class="simple-text">
+          
+        </a>
+        <a routerLink="/dashboard" class="simple-text ">
+          Keryar
+        </a> -->
+      </div>
+    </div>
+  </div>
 </div>
