--- a/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -33,7 +33,7 @@
 
     .sidebar-wrapper{
         position: relative;
-        height: calc(100vh - 75px);
+        height: calc(100vh - 0px);
         overflow: auto;
         width: 260px;
         z-index: 4;
@@ -473,6 +473,7 @@
   .main-panel{
       height: 100%;
       max-height: 100%;
+      zoom:80% !important;
   }
 }
 
