--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,36 +23,38 @@
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
           </div>
+          
         </div>
       </div>
+      
     </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
-      <div class="card card-stats" (click)="openServices()">
-        <div class="card-body ">
-          <div class="row">
-            <div class="col-5 col-md-4">
-              <div class="icon-big text-center icon-warning">
-                <i class="fa fa-scissors text-success"></i>
+        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+          <div class="card card-stats" (click)="openServices()">
+            <div class="card-body ">
+              <div class="row">
+                <div class="col-5 col-md-4">
+                  <div class="icon-big text-center icon-warning">
+                    <i class="fa fa-scissors text-success"></i>
+                  </div>
+                </div>
+                <div class="col-7 col-md-8">
+                  <div class="numbers">
+                    <p class="card-category">Services</p>
+                    <p class="card-title">Total: {{servicesList.length}}
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="col-7 col-md-8">
-              <div class="numbers">
-                <p class="card-category">Services</p>
-                <p class="card-title">Total: {{servicesList.length}}
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="card-footer">
           <hr>
           <div class="stats">
-            <i class="fa fa-arrow-right"></i> View
+            <i class="fa fa-arrow-right"></i> View        
           </div>
         </div>
       </div>
-    </div>
+    </div> 
     <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
       <div class="card card-stats" (click)="openEmployee()">
         <div class="card-body ">
@@ -149,15 +151,42 @@
             </div>
           </div>
         </div>
-        <div class="card-footer">
-          <hr>
-          <div class="stats">
-            <i class="fa fa-arrow-right"></i> View
+          <div class="card-footer">
+            <hr>
+            <div class="stats">
+              <i class="fa fa-arrow-right"></i> View
+            </div>
           </div>
         </div>
       </div>
+      <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="card card-stats" (click)="openOffer()">
+          <div class="card-body ">
+            <div class="row">
+              <div class="col-5 col-md-4">
+                <div class="icon-big text-center icon-warning">
+                  <i class="fa fa-gift text-success"></i>
+                </div>
+              </div>
+              <div class="col-7 col-md-8">
+                <div class="numbers">
+                  <p class="card-category">Combo Offers</p>
+                  <p class="card-title">Total offer:{{offerList.length}}
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+      <div class="card-footer">
+        <hr>
+        <div class="stats">
+          <i class="fa fa-arrow-right"></i> View        
+        </div>
+      </div>
     </div>
-  </div>
+  </div> 
+      </div>
+      
   <div class="row">
     <div class="col-lg-12">
       <div class="card">
@@ -236,6 +265,7 @@
       </div>
     </div>
   </div>
+  
   <div class="row">
     <div class="col-md-6">
       <div class="card">
@@ -320,10 +350,12 @@
             </div>
           </div>
         </div>
+        
       </div>
     </div>
+    
   </div>
-
+  
   <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl modal-notice">
