--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -186,11 +186,11 @@
                                 <th class="text-center"></th>
                                 <th class="text-center">#</th>
                                 <th class="text-center">Customer Name</th>
-                                <th class="text-center">Contact NO</th>
+                                <!-- <th class="text-center">Contact NO</th> -->
                                 <th class="text-center">Whatsapp No</th>
                                 <th class="text-center">Gender</th>
-                                <th class="text-center">Address</th>
-                                <th class="text-center">Created Date</th>
+                                <!-- <th class="text-center">Address</th> -->
+                                <!-- <th class="text-center">Created Date</th> -->
                                 <th class="text-right">Actions</th>
                             </thead>
                             <tbody>
@@ -207,11 +207,11 @@
                                     </td>
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.fname}} {{ item.lname}} </td>
-                                    <td class="text-center">{{ item.contact }}</td>
+                                    <!-- <td class="text-center">{{ item.contact }}</td> -->
                                     <td class="text-center">{{ item.whatsapp }}</td>
                                     <td class="text-center">{{ item.gender }}</td>
-                                    <td class="text-center">{{ item.address }}</td>
-                                    <td class="text-center">{{ item.createddate | date }}</td>
+                                    <!-- <td class="text-center">{{ item.address }}</td> -->
+                                    <!-- <td class="text-center">{{ item.createddate | date }}</td> -->
                                     <td class="text-right">
                                         <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm">
                                             <i class="fa fa-eye" (click)="onlyViewCustomerDetails(item.id)"></i>
